# homework_27

./: pyproject.toml  pytest.ini
ads/: models.py  permissions.py  selection_views.py  serializers.py  urls.py  utils.py  views.py
ads/data/: data.json  user.json
ads/migrations/: 0001_initial.py  0002_alter_ad_author.py  0002_rename_address_ad_addres_rename_name_category_title.py  0003_rename_addres_ad_address_rename_title_category_name.py  0004_alter_ad_address_alter_category_name.py
categories/: models.py  urls.py  views.py
categories/migrations/: 0001_initial.py
homework_27/: settings.py  urls.py
locations/: models.py  views.py
locations/migrations/: 0001_initial.py
tests/: factories.py  fixtures.py
tests/ads/: ads_create_test.py  ads_list_test.py  ads_retrieve_test.py
tests/selections/: selections_create_test.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
